# Korni

./: .gitignore  @dbus.conf  Dockerfile  Dockerfile.ubuntu.20.04  KORNI_1.md  KORNI_3 motivation arch concept.md  README.md  build-docker-buntu.sh  build-docker.sh  quick-start.sh  run-docker.sh  run.sh
AppImage/: build-appimage.sh
docs/: Korni3 и сетевые коммуникации.html  Korni3 и сетевые коммуникации.md  Korni3.html  Korni3.md  README.md  TODO Название.md  korni3-FAQ.html  korni3-FAQ.md  paxos.md  Главное.html  Главное.md  Методы синхронизации файлов.html  Методы синхронизации файлов.md  Юридический взгляд на проект корни.html  Юридический взгляд на проект корни.md
docs/arch motivations/: korni выбор внутреннего формата хранения дампов.html  korni выбор внутреннего формата хранения дампов.md  Эксперименты с размером файлов.md  пример repack.txt
docs/caspaxos/: a-proof-of-correctness-for-caspaxos (copy).md  blogs-02-consensus.md  link-collection.md
korni3/: CMakeLists.txt  depends.sh  elf_strip.sh  main.cpp  my_command.cpp  my_command.h  my_crypto_utils.cpp  my_crypto_utils.h  my_filesystem.cpp  my_filesystem.h  my_geo.cpp  my_geo.h  my_sha256.cpp  my_sha256.h  my_sqlite.cpp  my_sqlite.h  sign.sh  verify.sh
old/: 1  1.proto  2.data.pb  2.proto  _dev.tool1  data.out  data.pb  daytime.awk  db.sqlite.sqbpro  db.sqlite.sql  dev  dev.sh.x.c  dev_08032022.sh  testTopicCert.pem  testTopicKey.pem
old-versions-ideas/: smoketest.lua
old-versions-ideas/korni1 prototype experiment/: .korniTopic  db.sqlite.sqbpro  korni_1.sh  mycert.pem  mykey.pem  schema.db.sqlite.sql
(+4 files in other folders)
